AWS S3 이미지 저장 / 불러오기 / 삭제

--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -11,11 +11,13 @@
             <textarea type="text" id="content" th:text="${article.content}" placeholder="내용" class="form-control update_content_area"></textarea>
             <span style="color:#0054FF" id="contentError"></span>
             <!-- 글 이미지 -->
-            <div  class="form-control" th:if="${article.imageUrls != null}">
+            <div  class="form-control">
                 <!-- 이미지 -->
-                <div th:each="imageUrl : ${article.imageUrls}">
-                    <img th:src="@{${imageUrl}}" width="750px">
+                <div th:each="imageUrl : ${article.imageUrls}"  th:if="${article.imageUrls.size() != 0}">
+                    <img th:src="@{${imageUrl}}" width="475px" height="240px">
+                    <button class="size_full" onclick="deleteImage(this)">삭제하기</button>
                 </div>
+
                 <!-- 이미지 첨부 -->
                 <div class="form-floating mb-3">
                     <!-- 이미지 첨부 창 -->
@@ -26,69 +28,89 @@
             <!-- 수정하기 버튼 -->
             <div class="button_flex">
                 <!-- 수정하기 버튼 -->
-                <button type="button" onclick="updateSubmit()" class="button_blue size_ful">수정하기</button>
+                <button type="button" onclick="updateSubmit()" class="button_blue size_full">수정하기</button>
             </div>
     </div>
 
     <script th:inline="javascript">
-        // 수정하기
-        function updateSubmit() {
-            var obj = {}; //var Obj = new Object();
+        var obj = {};
 
-            obj.title = $("#title").val();
-            obj.content = $("#content").val();
-            obj.id = [[${article.id}]];
-            var formData = new FormData();
-            var fileInput = $('#files')[0]; // 파일 입력 필드 가져오기
-            var files = fileInput.files; // 선택된 파일들 가져오기
-            // 첨부파일이 2개 이상일 시
-            if (files.length > 2) {
-                alert("이미지는 최대 2개까지 첨부할 수 있습니다.");
-                fileInput.value = "";
-            }
-            else {
-                // FormData에 파일 추가
-                for (var i = 0; i < files.length; i++) {
-                    formData.append('value', files[i]);
-                }
-                formData.append('key', new Blob([JSON.stringify(obj)], { type: "application/json" }));
+        var imageUrls = [[${article.imageUrls}]];
 
-                $.ajax({
-                　　type:'patch'
-                　   , processData: false // FormData를 사용하면 processData를 false로 설정해야 함
-                     , contentType: false // 파일 업로드 시에는 contentType을 false로 설정해야 함
-                 　 　, data: formData
-                　  　, url: '/article/update'
-                　  　, success: function(data) {
-                        if(data.message == "제목과 내용을 수정해주세요")
-                        {
-                            alert(data.message);
-                        }
-                        else {
-                            location.href='/article/detail/' + obj.id;
-                        }
-                　 　}
-                     , error:function(e) {
+        function deleteImage(button) {
+        var imageUrl = button.previousElementSibling.getAttribute('src');
 
-                        // 제목 에러 메시지 설정
-                        var jsonResponse = JSON.parse(e.responseText);
-                        if (jsonResponse.hasOwnProperty('title')) {
-                            document.getElementById("titleError").innerText = jsonResponse.title;
-                        } else {
-                            document.getElementById("titleError").innerText = "";
-                        }
-
-                        // 내용 에러 메시지 설정
-                        if (jsonResponse.hasOwnProperty('content')) {
-                            document.getElementById("contentError").innerText = jsonResponse.content;
-                        } else {
-                            document.getElementById("contentError").innerText = "";
-                        }
-                　　　
-                　　}
-               });
-           }
+        imageUrls = imageUrls.filter(function(item) {
+        return item !== imageUrl;
+        });
+        obj.imageUrls = imageUrls;
+        var parentDiv = button.parentNode;
+        parentDiv.remove(); // 부모 요소 삭제
         }
+
+
+       // 수정하기
+       function updateSubmit() {
+
+           obj.title = $("#title").val();
+           obj.content = $("#content").val();
+           obj.id = [[${article.id}]];
+
+           var formData = new FormData();
+           var fileInput = $('#files')[0]; // 파일 입력 필드 가져오기
+           var files = fileInput.files; // 선택된 파일들 가져오기
+           if(obj.imageUrls == undefined)
+           {
+                    obj.imageUrls = imageUrls;
+           }
+           // 첨부파일이 2개 이상일 시
+           if (files.length + obj.imageUrls.length > 2) {
+               alert("이미지는 최대 2개까지 첨부할 수 있습니다.");
+               fileInput.value = "";
+           }
+           else {
+               // FormData에 파일 추가
+               for (var i = 0; i < files.length; i++) {
+                   formData.append('value', files[i]);
+               }
+               formData.append('key', new Blob([JSON.stringify(obj)], { type: "application/json" }));
+
+               $.ajax({
+               　　type:'patch'
+               　   , processData: false // FormData를 사용하면 processData를 false로 설정해야 함
+                    , contentType: false // 파일 업로드 시에는 contentType을 false로 설정해야 함
+                　 　, data: formData
+               　  　, url: '/article/update'
+               　  　, success: function(data) {
+                       if(data.message == "제목과 내용을 수정해주세요")
+                       {
+                           alert(data.message);
+                       }
+                       else {
+                           location.href='/article/detail/' + obj.id;
+                       }
+               　 　}
+                    , error:function(e) {
+
+                       // 제목 에러 메시지 설정
+                       var jsonResponse = JSON.parse(e.responseText);
+                       if (jsonResponse.hasOwnProperty('title')) {
+                           document.getElementById("titleError").innerText = jsonResponse.title;
+                       } else {
+                           document.getElementById("titleError").innerText = "";
+                       }
+
+                       // 내용 에러 메시지 설정
+                       if (jsonResponse.hasOwnProperty('content')) {
+                           document.getElementById("contentError").innerText = jsonResponse.content;
+                       } else {
+                           document.getElementById("contentError").innerText = "";
+                       }
+               　　　
+               　　}
+              });
+          }
+       }
     </script>
 </th:block>
 </html>
