--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
     <!-- 글 페이지 리스트 -->
     <div th:if="${endPage != 0}" class="paging_list">
         <!-- 이전 링크 있을시 활성화 없을시 비 활성화 -->
-        <a class="page_previous" th:classappend=" ${!article.hasPrevious()} ? 'disabled' " th:href="${!article.isFirst()} ? @{/article/paging(page=${article.getPageable().getPageNumber()})}"> 이전 </a>
+        <a class="page_previous" th:classappend=" ${!article.hasPrevious()} ? 'disabled' " th:href="${!article.isFirst()} ? @{/(page=${article.getPageable().getPageNumber()})}"> 이전 </a>
 
         <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
             <!-- 현재페이지는 링크 없이 숫자만 -->
@@ -41,7 +41,7 @@
             </span>
         </span>
         <!-- 다음 링크 있을시 활성화 없을시 비 활성화 -->
-        <a class="page_next" th:classappend=" ${!article.hasNext()} ? 'disabled' "  th:href="${article.isLast()} ? '#' : @{/article/paging(page=${article.number + 2})}"> 다음 </a>
+        <a class="page_next" th:classappend=" ${!article.hasNext()} ? 'disabled' "  th:href="${article.isLast()} ? '#' : @{/(page=${article.number + 2})}"> 다음 </a>
     </div>
 </th:block>
 </html>
