--- a/src/main/resources/static/css/content.css
+++ b/src/main/resources/static/css/content.css
@@ -81,7 +81,7 @@ width:500px;
 /* 페이지 리스트 */
 .paging_list {
 display:flex;
-justify-content:space-between;
+justify-content:flex-end;
 margin: 0 auto;
 margin-Top:20px;
 width:500px;
