--- a/src/main/resources/templates/searchindex.html
+++ b/src/main/resources/templates/searchindex.html
@@ -41,11 +41,11 @@
     <!-- 글 페이지 리스트 -->
     <div th:if="${hasResults}" class="paging_list" >
         <!-- 이전 링크 있을시 활성화 없을시 비 활성화 -->
-        <a class="page_previous" th:classappend="${!hasPrevious} ? 'disabled'" th:href="${hasPrevious} ? @{/(previous=1,previousId=${previousId},lastId=${lastId})} : '#'"> 이전 </a>
+
 
 
         <!-- 다음 링크 있을시 활성화 없을시 비 활성화 -->
-        <a th:if=${hasNext} class="page_next" th:classappend="${!hasNext} ? 'disabled'" th:href="${hasNext} ? @{/(previousId=${previousLastId},lastId=${nextLastId})} : '#'"> 다음 </a>
+        <a th:if=${hasNext} class="page_next" th:classappend="${!hasNext} ? 'disabled'" th:href="${hasNext} ? @{/articles/search(query=${query},previousId=${previousLastId},lastId=${nextLastId})} : '#'"> 다음 </a>
     </div>
     <script th:inline="javascript">
 
