페이징 이전페이지 / 다음페이지 기능 css Update

--- a/src/main/resources/templates/searchindex.html
+++ b/src/main/resources/templates/searchindex.html
@@ -39,7 +39,7 @@
         <p>검색 결과가 없습니다.</p>
     </div>
     <!-- 글 페이지 리스트 -->
-    <div th:if="${hasResults}" class="paging_list" >
+    <div th:if="${hasResults}" class="search_paging_list" >
         <!-- 이전 링크 있을시 활성화 없을시 비 활성화 -->
 
 
