--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -78,6 +78,10 @@
         <div th:if="${comment.deleted == true and comment.parent == null}">
             <div> 삭제된 댓글 입니다!</div>
         </div>
+        <!-- 대댓글이 살아 있는 상태에서 댓글이 삭제 상태인 경우 삭제된 댓글 표시 -->
+        <div th:if="${comment.deleted == true and comment.parent != null}">
+            <div> 삭제된 댓글 입니다!</div>
+        </div>
 
         <!-- 답글 쓰기 form -->
         <div class="reply-form" th:id="'reply_form_' + ${comment.id}" style="display: none;">
@@ -148,7 +152,7 @@
                         　　type:'delete'
                         　　, contentType:'application/json'
                         　　, data: JSON.stringify(obj)
-                        　　, url: '/article/delete'
+                        　　, url: '/article/delete/' + obj.id
                         　　, success: function(data) {
                                  modal.style.display = 'none';
                                  location.href='/';
@@ -237,24 +241,7 @@
                             　　}
                             });
                 }
-                // 대댓글 삭제
-                function deleteReply(replyId) {
-                       var obj = {};
-                       obj.id = replyId;
 
-                       $.ajax({
-                            　　type:'delete'
-                            　　, contentType:'application/json'
-                            　　, data: JSON.stringify(obj)
-                            　　, url: '/reply/delete'
-                            　　, success: function(data) {
-                                     window.location.href = '/article/detail/' + [[${article.id}]];
-                            　　}
-                               , error:function(e) {
-                                     console.log(e);
-                            　　}
-                            });
-                };
     </script>
 </th:block>
 </html>
