--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -78,7 +78,7 @@
         <div th:if="${comment.deleted == true and comment.parent == null}">
             <div> 삭제된 댓글 입니다!</div>
         </div>
-        <!-- 대댓글이 살아 있는 상태에서 댓글이 삭제 상태인 경우 삭제된 댓글 표시 -->
+        <!-- 부모댓글이 살아 있는 상태에서 대댓글이 삭제 상태인 경우 삭제된 댓글 표시 -->
         <div th:if="${comment.deleted == true and comment.parent != null}">
             <div> 삭제된 댓글 입니다!</div>
         </div>
